--- a/code/Back-End/src/main/resources/application.properties
+++ b/code/Back-End/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=toor
 spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema: always
-
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
