--- a/code/Front-End/pubspec.yaml
+++ b/code/Front-End/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   omni_datetime_picker: ^1.0.9
   http: ^1.2.0
   provider: ^6.1.1
+  crypt: ^4.3.1
 
 dev_dependencies:
   flutter_test:
