--- a/code/Back-End/src/main/resources/application-test.properties
+++ b/code/Back-End/src/main/resources/application-test.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/barberapp_test
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=root
-spring.datasource.password=toor
-spring.jpa.hibernate.ddl-auto=update
-spring.session.jdbc.initialize-schema: always
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-server.servlet.json.max-depth=6000
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
