--- a/code/Back-End/src/main/resources/application.properties
+++ b/code/Back-End/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/barberapp
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema: always
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
