--- a/code/Back-End/.gitignore
+++ b/code/Back-End/.gitignore
@@ -6,8 +6,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/application.properties
-
+application.properties
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +34,7 @@ build/
 
 ### VS Code ###
 .vscode/
+!/src/main/resources/application.properties
+!/src/main/resources/application.properties
+!/src/main/resources/application.properties
+!/src/main/resources/application.properties
