--- a/code/Back-End/src/main/resources/application.properties
+++ b/code/Back-End/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema: always
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.servlet.json.max-depth=6000
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=barberapphaircare@gmail.com
+spring.mail.password=ilon aanq voaf srtl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
